results/log_l2l_l-74_hs-2560_bs-16_ws-4_2025-04-26.1745650000.txt
Traceback (most recent call last):
  File "/home/sabiha/stronghold/L2L/pretrain_gpt.py", line 27, in <module>
    from megatron.training import pretrain
  File "/home/sabiha/stronghold/L2L/megatron/training.py", line 306
    register L2L offloading strategy
             ^
SyntaxError: invalid syntax
